<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.kmjd.android.zxhzm.alipaybill.activity.GuideActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:background="#7f7f7f"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/access_text"
                android:textColor="#fff"
                android:textSize="@dimen/sp17"/>

            <RelativeLayout
                android:id="@+id/setting"
                android:layout_width="@dimen/dp85"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true">

                <ImageView
                    android:layout_width="@dimen/dp25"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp10"
                    android:gravity="center"
                    android:src="@mipmap/right_arrow"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="@dimen/dp40"
                    android:gravity="center"
                    android:text="@string/to_open"
                    android:textColor="#fff"
                    android:textSize="@dimen/sp10"/>
            </RelativeLayout>

        </RelativeLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/vp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <Button
        android:id="@+id/bt_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="@dimen/dp85"
        android:background="@drawable/sure_bg"
        android:padding="@dimen/dp15"
        android:text="@string/bt_start"
        android:visibility="gone"
        android:textColor="@color/btn_text_selector"
        />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/dp60">

        <LinearLayout
            android:id="@+id/container_gray_point"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="horizontal">
        </LinearLayout>

        <View
            android:id="@+id/red_point"
            android:layout_width="@dimen/dp8"
            android:layout_height="@dimen/dp8"
            android:background="@drawable/point_red_bg"/>
    </RelativeLayout>


</RelativeLayout>


