<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#7f7f7f">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/back"
                    android:layout_width="@dimen/dp45"
                    android:layout_height="match_parent"
                    android:background="#7f7f7f"
                    android:paddingRight="@dimen/dp10"
                    android:src="@mipmap/back_bill"/>

                <View
                    android:layout_width="@dimen/dp1"
                    android:layout_height="@dimen/dp28"
                    android:layout_gravity="center"
                    android:layout_marginLeft="@dimen/dp5"
                    android:background="#9f9f9f"/>

                <TextView
                    android:id="@+id/app_about"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left|center"
                    android:layout_marginLeft="@dimen/dp15"
                    android:text="@string/about_app"
                    android:textColor="@color/white"
                    android:textSize="@dimen/sp14"/>

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#f0f0f0"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp150"
            android:layout_marginTop="@dimen/dp12"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@mipmap/alipay_log"/>
            |

            <TextView
                android:layout_marginTop="@dimen/dp8"
                android:id="@+id/about_verson"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/accout_part"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:id="@+id/three"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp55"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp20"
                android:text="@string/curren_accunt"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"/>

            <TextView
                android:id="@+id/curren_account"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:layout_toRightOf="@+id/three"
                android:gravity="center_vertical|right"
                android:paddingLeft="@dimen/dp5"
                android:lines="1"
                android:ellipsize="end"
                android:layout_marginRight="@dimen/dp10"
                android:text=" "
                android:textColor="@color/gray"
                android:textSize="@dimen/sp12"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:background="#f0f0f0"/>

        <RelativeLayout
            android:id="@+id/accout_parts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp55"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp20"
                android:text="@string/book_name"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"/>

            <TextView
                android:id="@+id/curren_book_name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:layout_toRightOf="@+id/first"
                android:gravity="center_vertical|right"
                android:paddingLeft="@dimen/dp5"
                android:lines="1"
                android:ellipsize="end"
                android:layout_marginRight="@dimen/dp10"
                android:text=" "
                android:textColor="@color/gray"
                android:textSize="@dimen/dp12"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:background="#f0f0f0"/>

        <RelativeLayout
            android:id="@+id/curren_nums"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:visibility="gone">

            <TextView
                android:id="@+id/second"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp55"
                android:layout_alignParentLeft="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp20"
                android:text="@string/numbers"
                android:textColor="@color/black"
                android:textSize="@dimen/sp15"/>

            <TextView
                android:id="@+id/curren_num"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp55"
                android:layout_toRightOf="@+id/second"
                android:gravity="center_vertical|right"
                android:paddingLeft="@dimen/dp5"
                android:lines="1"
                android:ellipsize="end"
                android:layout_marginRight="@dimen/dp10"
                android:text=" "
                android:textColor="@color/gray"
                android:textSize="@dimen/sp16"/>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_gravity="center"
            android:background="#f0f0f0"/>

        <RelativeLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/public_dialog1_generate">

            <TextView
                android:id="@+id/checkup"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp65"
                android:background="@drawable/text_selector"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="@dimen/dp20"
                android:text="@string/checkup"
                android:textColor="@color/black"
                android:textSize="@dimen/sp14"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/dp65"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/dp20"
                android:gravity="center_vertical"
                android:src="@mipmap/check"/>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>
